--- a/web-application/web-application/appsettings.Development.json
+++ b/web-application/web-application/appsettings.Development.json
@@ -5,5 +5,6 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "MyKey": "Value of key from appsettings.development.json"
 }
