--- a/web-application/web-application/appsettings.json
+++ b/web-application/web-application/appsettings.json
@@ -4,5 +4,6 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MyKey": "Value of key from appsettings.json"
 }
